@startuml

title __VIEWS's Class Diagram__\n

    class fr.projava.triangle.Views.AuthWindowController {
        - btnSignIn : Button
        - btnSignUp : Button
        - pseudoInput : TextField
        - returnMessage : Label
        {static} - user : User
        + goToChat()
        + signIn()
        + signInEnter()
        + signUp()
    }


    class fr.projava.triangle.Views.ChatWindowController {
        - boxHistory : VBox
        - btnChangePseudo : Button
        - btnDisconnect : Button
        - btnSend : Button
        - lblErrorPseudo : Label
        - lblMessageNotSent : Label
        - lblPseudo : Label
        - listen : boolean
        - message : TextArea
        - scrollpaneHistory : ScrollPane
        - txtNewPseudo : TextField
        {static} - user : User
        {static} - userSelected : UserObject
        - vboxConnectedUsers : VBox
        + addMessageReceived()
        + changePseudo()
        + disconnect()
        + goToAuth()
        + initialize()
        {static} + isSelected()
        + loadHistory()
        + notifyNewMessage()
        + refreshConnectedUsers()
        + sendMessage()
        + setUser()
        + showConnectedUsers()
    }
  

  fr.projava.triangle.Views.ChatWindowController .up.|> javafx.fxml.Initializable
  fr.projava.triangle.Views.ChatWindowController o-- fr.projava.triangle.Observers.ConnectedUsersObserver : connectedUsersObserver
  fr.projava.triangle.Views.ChatWindowController o-- fr.projava.triangle.Observers.ReceivedMessageObserver : receivedMessageObserver
  fr.projava.triangle.Views.ChatWindowController o-- fr.projava.triangle.Observers.Subject : subject


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
